--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,14 @@ i{
     margin-bottom: 10px;
 }
 
+.input-field-date{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    padding: 0 10px 0 10px;
+    margin-bottom: 12px;
+}
+
 .input{
     height: 45px;
     width: 100%;
@@ -105,6 +113,10 @@ i{
 .input-field-checkbox label{
     margin-left: 10px;
     font-size: 14px;
+}
+
+.input-field-date label{
+    margin-right: 15px;
 }
 
 .input-box .input-field-checkbox input:checked{
@@ -128,6 +140,8 @@ i{
     font-size: 13px;
     color: #5d5076;
 }
+
+
 
 .submit{
     border: none;
@@ -160,13 +174,17 @@ span a:hover{
     text-decoration: underline;
 }
 
+/* Style MainScreen */
+
 nav{
     top: -10px;
+    border-bottom: 1px solid lightgray;
+    box-shadow: 2px 2px 2px lightgray;
 }
 
 .nav-content{
-    width: 100vh;
-    height: 70px;
+    width: 100%;
+    height: 90px;
 }
 
 .brand-content{
@@ -207,4 +225,64 @@ nav{
     top: 24%;
     background-color: transparent;
     border: none;
+}
+
+#botao-cadastro{
+    background-color: #6060AB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: "Righteous", sans-serif;
+    font-weight: 400;
+    transition: 0.1s;
+}
+
+#botao-cadastro:hover{
+    background-color: #6060abd4;
+}
+
+
+
+/*iframe Tela de Cadastro*/
+
+.telaCadastro{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);;
+    animation: fadeIn 0.5s ease-in-out;
+    z-index: 1;
+}
+
+.conteudo-cadastro{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 40%;
+    height: 80%;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
