--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
 
-
 *{
     padding: 0;
     margin: 0;
+}
+
+.tema-claro{
+    background-color: #f1f1f1;
+    transition: background 0.2s linear;
+}
+
+body.tema-escuro{
+    background-color: #232c35;
 }
 
 .main-login{
@@ -96,7 +104,7 @@ i{
     flex-direction: row;
     position: relative;
     padding: 0 10px 0 10px;
-    margin-bottom: 12px;
+    margin-bottom: 30px;
 }
 
 .input{
@@ -141,8 +149,6 @@ i{
     color: #5d5076;
 }
 
-
-
 .submit{
     border: none;
     outline: none;
@@ -175,11 +181,17 @@ span a:hover{
 }
 
 /* Style MainScreen */
-
 nav{
+    background-color: lightcoral;
     top: -10px;
     border-bottom: 1px solid lightgray;
     box-shadow: 2px 2px 2px lightgray;
+}
+
+.navbar-dark{
+    background-color: #151b20;
+    border-bottom: 1px solid rgb(19, 19, 19);
+    box-shadow: 2px 2px 2px rgb(19, 19, 19);
 }
 
 .nav-content{
@@ -227,6 +239,10 @@ nav{
     border: none;
 }
 
+.list-group .item-de-menu{
+    background-color: white;
+}
+
 #botao-cadastro{
     background-color: #6060AB;
     display: flex;
@@ -242,6 +258,55 @@ nav{
     background-color: #6060abd4;
 }
 
+#botao-menu {
+    background-color: #6060AB;
+    color: white;
+    margin: 10px;
+}
+
+.botao-temaEscuro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    opacity: .9;
+}
+
+.checkbox{
+    opacity: 0;
+    position: absolute;
+    
+}
+
+.label-temaEscuro{
+    background-color: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 26px;
+    width: 50px;
+    transform: scale(1.5);
+}
+
+.label-temaEscuro .ball{
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 22px;
+    width: 22px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label-temaEscuro .ball {
+    transform: translateX(24px);
+}
 
 
 /*iframe Tela de Cadastro*/
@@ -267,13 +332,13 @@ nav{
     padding: 20px;
     border-radius: 10px;
     width: 40%;
-    height: 80%;
+    height: 70%;
 }
 
 .close {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 20px;
     font-size: 20px;
     cursor: pointer;
 }
@@ -284,5 +349,20 @@ nav{
     }
     to {
         opacity: 1;
+    }
+}
+
+@media(max-width: 720px){
+    .conteudo-cadastro{
+        width: 95%;
+    }
+    .search-bar{
+        width: 90%;
+    }
+}
+
+@media(min-width: 720px ) and (max-width: 1150px){
+    .conteudo-cadastro{
+        width: 60%;
     }
 }
