--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,11 @@ body.tema-escuro{
 }
 
 #bg-login{
-    background-image: url(./imgs/bgEscritorio2.jpg);
+    background-image: url(../imgs/bgEscritorio2.jpg);
 }
 
 #bg-cadastro{
-    background-image: url(/imgs/pexels-cup-of-couple-6177608.jpg);
+    background-image: url(../imgs/pexels-cup-of-couple-6177608.jpg);
 }
 
 .logo-login{
