--- a/tarefas/templates/base.html
+++ b/tarefas/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/logo1-novo.png'%}">
     <title>{% block title %}{% endblock %}</title>
     <!--Stylesheet Local-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
