--- a/tarefas/templates/base.html
+++ b/tarefas/templates/base.html
@@ -39,7 +39,7 @@
                 <div class="list-group">
                     <a href="#" class="list-group-item list-group-item-action" id="botao-cadastro" onclick="abrirCadastro()">Cadastrar tarefa</a>
                     <a href="{% url 'home' %}" class="list-group-item list-group-item-action item-de-menu">Tarefas cadastradas</a>
-                    <a href="#" class="list-group-item list-group-item-action item-de-menu">Perfil</a>
+                    <a href="/perfil" class="list-group-item list-group-item-action item-de-menu">Perfil</a>
                     <a href="#" class="list-group-item list-group-item-action item-de-menu">Configurações</a>
                     <a href="#" class="list-group-item list-group-item-action item-de-menu">Sair</a>
                 </div>
