--- a/tarefas/templates/tarefas/home.html
+++ b/tarefas/templates/tarefas/home.html
@@ -22,14 +22,18 @@
                         {% with encoded_id=tarefa.id|base64_encode %}
                             <h5 class="mb-1" ><a href="{% url 'verTarefa' encoded_id=encoded_id %}">{{ tarefa.titulo }}</a></h5>
                         {% endwith %}
-                        <small class="tempoRestante" data-termino="{{ tarefa.termino }}">{{ tarefa.termino }}</small>
+                        {% if tarefa.done == 'doing' %}
+                            <small class="tempoRestante" data-termino="{{ tarefa.termino }}">{{ tarefa.termino }}</small>
+                        {% else%}
+                            <small class="tempoRestante">Tarefa concluida!</small>
+                        {% endif %}
                     </div>
                     <div class="d-flex w-100 justify-content-between">
                         <p class="mb-1">{{ tarefa.descricao|default:"-" }}</p>
                         <div class="botoes-controle">
                             <a href="deleta/{{ tarefa.id }}" class="botao-deleta"><i class="bi bi-trash"></i></a>
                             <a href="edit/{{ tarefa.id }}" class="botao-atualiza"><i class="bi bi-pencil"></i></a>
-                            <a href="#" class="botao-concluir"><i class="bi bi-check-lg"></i></a>
+                            <a href="mudastatus/{{ tarefa.id }}" class="botao-concluir"><i class="bi bi-check-lg"></i></a>
                         </div>
                     </div>
                 </li>
@@ -49,7 +53,7 @@
             </span>
         </div> 
         {% else %}
-            <p>Sem tarefas cadastradas</p>
+            <p id="mesagemSemTarefas">Sem tarefas cadastradas</p>
     {% endif %}
 </div>
 
