--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - </title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!--Bootstrap Stylesheet-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,17 +16,17 @@
     <div class="container-fluid main-login">
         <div class="row row-login">
             <div class="col-md-7 d-none d-md-block side-image" id="bg-login">
-                <img class="logo-login" src="imgs/Logotipo.png" alt="Logo site">
+                <img class="logo-login" src="{% static 'imgs/logo1-novo.png' %}" alt="Logo site">
                 <div class="text-login">
                     <p>"Transforme seus dias caóticos em uma dança organizada com nosso site de gestão de tarefas." - <i>Nome do site</i></p>
                 </div>
             </div>
             <div class="col-md-5 right-side">
-                <form class="input-box" name="login-form" method="post" action="">
+                <form class="input-box" name="login-form" method="post" action="{% url 'login' %}">{% csrf_token %}
                     <header>Login</header>
                     <div class="input-field">
-                        <input type="text" class="input" name="user-email" id="user-email" required autocomplete="off">
-                        <label for="user-email">Email</label>
+                        <input type="text" class="input" name="user-username" id="user-username" required autocomplete="off">
+                        <label for="user-username">Nome de usuario</label>
                     </div>
                     <div class="input-field">
                         <input type="password" class="input" name="user-pwd" id="user-pwd" required>
@@ -34,7 +36,7 @@
                         <input type="submit" class="submit" value="Entrar">
                     </div>
                     <div class="singin">
-                        <span>Ainda não possui uma conta? <a href="cadastro.html">Cadastre-se aqui</a></span>
+                        <span>Ainda não possui uma conta? <a href="{% url 'cadastro' %}">Cadastre-se aqui</a></span>
                     </div>
                 </form>
             </div>
