--- a/tarefas/templates/tarefas/perfilUser.html
+++ b/tarefas/templates/tarefas/perfilUser.html
@@ -5,7 +5,7 @@
     <div class="container dashboard">
         <div class="row">
             <div class="col-4 dashboard-box">
-                <h4>Finalizadas no últimos 30 dias</h4>
+                <h4>Finalizadas (30 dias)</h4>
                 <span>{{ tarefasRecentes }}</span>
             </div>
             <div class="col-4 dashboard-box">
