--- a/tarefas/static/css/style.css
+++ b/tarefas/static/css/style.css
@@ -525,7 +525,7 @@ ul.messages li.hidden{
     padding: 0;
     width: 100%;
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .dashboard h4{
@@ -545,6 +545,14 @@ ul.messages li.hidden{
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
+}
+
+#donutchart{
+    max-width: 100%;
+    height: 300px;
+    display: block;
+    margin: 0 auto;
+    margin-top: -40px;
 }
 
 @keyframes fadeIn {
@@ -568,7 +576,7 @@ ul.messages li.hidden{
     }
     .botoes-controle{
         width: 35%;
-        height: 100%;
+        height: 33px;
     }
 }
 
@@ -581,5 +589,6 @@ ul.messages li.hidden{
     }
     .botoes-controle{
         width: 30%;
+        height: 33px;
     }
 }
