--- a/tarefas/templates/tarefas/home.html
+++ b/tarefas/templates/tarefas/home.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="d-flex w-100 justify-content-between">
                         <p class="mb-1">{{ tarefa.descricao|default:"-" }}</p>
-                        <div class="botoes-controle">
+                        <div class="col-5 col-sm-4 col-lg-3 botoes-controle">
                             <a href="deleta/{{ tarefa.id }}" class="botao-deleta"><i class="bi bi-trash"></i></a>
                             <a href="edit/{{ tarefa.id }}" class="botao-atualiza"><i class="bi bi-pencil"></i></a>
                             <a href="mudastatus/{{ tarefa.id }}" class="botao-concluir"><i class="bi bi-check-lg"></i></a>
