--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro | </title>
+    <title>Cadastro | Smoothflow</title>
     <!--Stylesheet Local-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!--Bootstrap Stylesheet-->
@@ -15,6 +15,7 @@
     <div class="container-fluid main-login">
         <div class="row row-login">
             <div class="col-md-7 d-none d-md-block side-image" id="bg-cadastro">
+                <a href="/"><img class="logo-login" src="{% static 'imgs/logo1-novo.png' %}" alt="Logo site"></a>
                 <div class="text-login">
                     <p>"Transforme seus dias caóticos em uma dança organizada com nosso site de gestão de tarefas." - <i>Nome do site</i></p>
                 </div>
