--- a/tarefas/templates/base.html
+++ b/tarefas/templates/base.html
@@ -40,7 +40,7 @@
                     <a href="#" class="list-group-item list-group-item-action" id="botao-cadastro" onclick="abrirCadastro()">Cadastrar tarefa</a>
                     <a href="{% url 'home' %}" class="list-group-item list-group-item-action item-de-menu">Tarefas cadastradas</a>
                     <a href="/perfil" class="list-group-item list-group-item-action item-de-menu">Perfil</a>
-                    <a href="#" class="list-group-item list-group-item-action item-de-menu">Sair</a>
+                    <a href="/auth/logout" class="list-group-item list-group-item-action item-de-menu">Sair</a>
                 </div>
                 <!--Botão para ativar o tema escuro-->
                 <div class="botao-temaEscuro">
