--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -16,7 +16,7 @@
         <div class="row row-login">
             <div class="col-md-7 d-none d-md-block side-image" id="bg-cadastro">
                 <div class="text-login">
-                    <p>"Transforme seus dias caóticos em uma dança organizada com nosso site de gestão de tarefas." - <i>Nome do site</i></p>
+                    <p>Transforme seus dias caóticos em uma dança organizada com nosso site de gestão de tarefas</p>
                 </div>
             </div>
             <div class="col-md-5 right-side">
@@ -39,7 +39,7 @@
                         <label for="user-pwd">Senha de 8 digitos</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="input" name="confirm-pwd" id="confirm-pwd" required>
+                        <input type="password" class="input" name="confirm-pwd" id="confirm-pwd" onchange="verificaSenha()" required>
                         <label for="confirm-pwd">Confirmar senha</label>
                     </div>
                     <!--div class="input-field-checkbox">
@@ -59,5 +59,6 @@
 
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="{% static 'js/script.css' %}" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
