--- a/tarefas/templates/tarefas/index.html
+++ b/tarefas/templates/tarefas/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="col-12 col-sm-6 align-self-center justify-content-md-ceneter p-5">
                 <h2>3 - Experiência Responsiva em Qualquer Dispositivo</h2>
-                <p>Explore o seu Dashboard Personalizado, projetado para proporcionar uma visão abrangente do seu desempenho e progresso. Aqui, você encontrará informações valiosas sobre suas tarefas nos últimos 30 dias, tarefas concluídas e pendentes, tudo em um só lugar.</p>
+                <p>Nosso site é totalmente responsivo, adaptando-se perfeitamente a qualquer dispositivo que você escolher usar, proporcionando uma experiência de usuário consistente e intuitiva.</p>
             </div>
         </div>
     </section>
