--- a/tarefas/templates/tarefas/perfilUser.html
+++ b/tarefas/templates/tarefas/perfilUser.html
@@ -3,8 +3,10 @@
 {% block content %}
 <div class="col-md-9">
     <div class="user-description">
-        <span class="username">{{ user.first_name }}</span>
-        <span class="user">{{ user }}</span>
+        <span class="username">Olá, {{ user.first_name }}!</span>
+        <span class="user">@{{ user }}</span>
+        <hr>
+        <h3 class="texto-user">Explore suas estatísticas aqui no Dashboard:</h3>
     </div>
     <div class="container dashboard">
         <div class="row">
