fix: erro no cadastro devido a má verificacao da funcao message

--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -36,7 +36,7 @@
                         <label for="user-username">Nome de usuario</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="input" name="user-pwd" id="user-pwd" required>
+                        <input type="password" class="input" name="user-pwd" id="user-pwd" min="8" required>
                         <label for="user-pwd">Senha</label>
                     </div>
                     <div class="input-field">
