--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -43,11 +43,11 @@
                         <label for="user-username">Nome de usuario</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="input" name="user-pwd" id="user-pwd" required>
+                        <input type="password" class="input" name="user-pwd" id="user-pwd" min="8" required>
                         <label for="user-pwd">Senha de 8 digitos</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="input" name="confirm-pwd" id="confirm-pwd" onchange="verificaSenha()" required>
+                        <input type="password" class="input" name="confirm-pwd" id="confirm-pwd" min="8" onchange="verificaSenha()" required>
                         <label for="confirm-pwd">Confirmar senha</label>
                     </div>
                     <!--div class="input-field-checkbox">
