--- a/tarefas/templates/base.html
+++ b/tarefas/templates/base.html
@@ -50,7 +50,7 @@
                             <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278"/>
                             <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
                           </svg></i>
-                          <i><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#f39c12" class="bi bi-sun-fill" viewBox="0 0 16 16">
+                          <i><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="#f39c12" class="bi bi-sun-fill" viewBox="0 1 16 16">
                             <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
                           </svg></i>
                           <div class="ball"></div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="input-field-date">
                         <label for="termino">Qual o dia dessa tarefa?</label>
-                        <input type="date" name="termino" id="fim-tarefa">
+                        <input type="date" name="termino" id="fim-tarefa" required autocomplete="off">
                     </div>
                     <div class="input-field">
                         <input type="submit" class="submit" value="Cadastrar">
@@ -104,7 +104,7 @@
             <li><a class="dropdown-item" href="#" id="botao-cadastro" onclick="abrirCadastro()">Cadastrar tarefa</a></li>
             <li><a class="dropdown-item" href="{% url 'home' %}">Tarefas cadastradas</a></li>
             <li><a class="dropdown-item" href="/perfil">Perfil</a></li>
-            <li><a class="dropdown-item" href="#">Sair</a></li>
+            <li><a class="dropdown-item" href="/auth/logout">Sair</a></li>
             <li>
                 <div class="botao-temaEscuro">
                     <input type="checkbox" class="checkbox" name="temaEscuro" id="temaEscuro">
